Pass basic test

--- a/coroutine_CPart/src/Makefile
+++ b/coroutine_CPart/src/Makefile
@@ -1,9 +1,9 @@
 NAME := libco
-CFLAGS += -U_FORTIFY_SOURCE -g
+CFLAGS += -U_FORTIFY_SOURCE -g #-O0 -fsanitize=address -fsanitize=undefined,address
 SRCS := co.c
 DEPS := $(SRCS)
 
-all: $(NAME)-64.so #$(NAME)-32.so
+all: clean $(NAME)-64.so #$(NAME)-32.so
 
 $(NAME)-64.so: $(DEPS) # 64bit shared library
 	gcc -fPIC -shared -m64 $(CFLAGS) $(SRCS) -o $@ $(LDFLAGS)
