fix bugs in queue, the concurrent bug still happen even has 0 M

--- a/coroutine_CPart/src/Makefile
+++ b/coroutine_CPart/src/Makefile
@@ -1,5 +1,5 @@
 NAME := libco
-CFLAGS += -U_FORTIFY_SOURCE -g #-O0 -fsanitize=address -fsanitize=undefined,address
+CFLAGS += -U_FORTIFY_SOURCE -g -O0# -fsanitize=address -fsanitize=undefined,address
 SRCS := co.c
 DEPS := $(SRCS)
 
