--- a/coroutine_CPart/src/Makefile
+++ b/coroutine_CPart/src/Makefile
@@ -1,15 +1,13 @@
-NAME := libco
-CFLAGS += -U_FORTIFY_SOURCE -g -O0 #-fsanitize=address -fsanitize=address
-SRCS := co.c
-DEPS := $(SRCS)
+CC = gcc
+CFLAGS ?= -g3 -O0 -fno-omit-frame-pointer -Wall -Wextra
+LDFLAGS = -shared -fPIC
 
-all: clean $(NAME)-64.so #$(NAME)-32.so
+all: libco-64.so
 
-$(NAME)-64.so: $(DEPS) # 64bit shared library
-	gcc -fPIC -shared -m64 $(CFLAGS) $(SRCS) -o $@ $(LDFLAGS)
-
-# $(NAME)-32.so: $(DEPS) # 32bit shared library
-# 	gcc -fPIC -shared -m32 $(CFLAGS) $(SRCS) -o $@ $(LDFLAGS)
+libco-64.so: co.c
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $<
 
 clean:
-	rm -f $(NAME)-*.so
+	rm -f *.so *.o
+
+.PHONY: all clean
