Fix exit bug and sp switch bug

--- a/coroutine_CPart/test/Makefile
+++ b/coroutine_CPart/test/Makefile
@@ -1,10 +1,10 @@
 .PHONY: test libco clean debug
-
+CC = clang
 all: libco-test-64
 
 test: libco all
 	@echo "==== TEST 64 bit ===="
-	@LD_LIBRARY_PATH=../src valgrind ./libco-test-64 2> log
+	@LD_LIBRARY_PATH=../src ./libco-test-64 2> log
 
 debug: libco all
 	@LD_LIBRARY_PATH=../src gdb ./libco-test-64 -x gdb.init
@@ -13,7 +13,7 @@ libco:
 	cd ../src && make clean && make CFLAGS="-g3 -O0 -fno-omit-frame-pointer"
 
 libco-test-64: main.c
-	gcc -I../src -L../src -m64 main.c -o $@ -g3 -O0 -fno-omit-frame-pointer -lco-64
+	$(CC) -I../src -L../src -m64 main.c -o $@ -g3 -O0 -fno-omit-frame-pointer -lco-64
 
 clean:
 	rm -f libco-test-* core* valgrind.log test.out
