--- a/coroutine_CPart/src/Makefile
+++ b/coroutine_CPart/src/Makefile
@@ -1,5 +1,5 @@
 CC = clang
-CFLAGS ?= -g3 -O0 -fno-omit-frame-pointer -Wall -Wextra
+# CFLAGS ?= -g3 -O0 -fno-omit-frame-pointer -Wall -Wextra
 LDFLAGS = -shared -fPIC
 
 all: libco-64.so
